<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
        android:padding="@dimen/margin_5dp">

            <TextView
                android:id="@+id/lbl_name"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:text="@string/employeename"
                android:textSize="@dimen/min_txt_size_12sp"
                android:layout_gravity="center"
                android:gravity="center|center_vertical"
                />
            <TextView
                android:id="@+id/lbl_doj"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:text="@string/employeedoj"
                android:textSize="@dimen/min_txt_size_12sp"
                android:layout_gravity="center"
                android:gravity="center|center_vertical"
                />
            <TextView
                android:id="@+id/lbl_age"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/employeeage"
                android:textSize="@dimen/min_txt_size_12sp"
                android:layout_gravity="center"
                android:gravity="center|center_vertical"
                />
            <TextView
                android:id="@+id/lbl_manager"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:text="@string/employeemanager"
                android:textSize="@dimen/min_txt_size_12sp"
                android:layout_gravity="center"
                android:gravity="center|center_vertical"
                />
            <TextView
                android:id="@+id/lbl_department"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/employeedepartment"
                android:textSize="@dimen/min_txt_size_12sp"
                android:layout_gravity="center"
                android:gravity="center|center_vertical"
               />

    </LinearLayout>
