<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/lbl_Empdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employeedetails"
        android:textSize="@dimen/mid_txt_size_14sp"
        android:padding="@dimen/margin_15dp"
        android:textColor="@color/colorwhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_5dp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Empdetails"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp">
            <TextView
                android:id="@+id/lbl_name"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:text="@string/employeename"
                android:gravity="center"
                android:textSize="@dimen/mid_txt_size_14sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lbl_doj"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:text="@string/employeedoj"
                android:gravity="center"
                android:textSize="@dimen/mid_txt_size_14sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lbl_age"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/employeeage"
                android:gravity="center"
                android:textSize="@dimen/mid_txt_size_14sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lbl_manager"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:text="@string/employeemanager"
                android:gravity="center"
                android:textSize="@dimen/mid_txt_size_14sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lbl_department"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/employeedepartment"
                android:gravity="center"
                android:textSize="@dimen/mid_txt_size_14sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorblack"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_emp_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="@+id/lbl_Empdetails"
            />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>